Make everything working for Rcar M3
Make everything compiling and running for Rcar M3.

Signed-off-by: Jonathan Aillet <jonathan.aillet@iot.bzh>

--- a/conf.d/project/etc/cltapp_sample-conf.json
+++ b/conf.d/project/etc/cltapp_sample-conf.json
@@ -12,7 +12,7 @@
     "spath": "./lib/plugins:./var",
     "libs": [
       "ctlapp_sample.ctlso",
-      "ctlapp_sample.lua"
+      "ctlapp_sample-api.lua"
     ]
   }],
 
