plugin: working to display app in foreground
Change-Id: I91c82035bb0a8922ee605f698e8c599876279578
Signed-off-by: Clément Bénier <clement.benier@iot.bzh>

--- a/conf.d/project/etc/agl_service_ctlapp_sample.json
+++ b/conf.d/project/etc/agl_service_ctlapp_sample.json
@@ -3,13 +3,12 @@
   "metadata": {
     "uid": "ctlapp_sample",
     "version": "1.0",
-    "api": "ctlapp",
+    "api": "agl_services_ctlapp_sample",
     "info": "ctlapp_sample service service to interface with homescreen & application framework"
   },
   "plugins": [{
     "uid": "ctlapp_sample",
     "info": "Plugin to handle interface with ctlapp_sample_app",
-    "spath": "./lib/plugins:./var",
     "libs": [
       "ctlapp_sample.ctlso",
       "ctlapp_sample-api.lua"
