--- a/conf.d/wgt/config.xml.in
+++ b/conf.d/wgt/config.xml.in
@@ -9,9 +9,17 @@
   <feature name="urn:AGL:widget:provided-api">
      <param name="agl_services_ctlapp_sample" value="ws" />
   </feature>
+  <feature name="urn:AGL:widget:required-binding">
+    <param name="lib/afb-agl_services_ctlapp_sample.so" value="local" />
+  </feature>
   <feature name="urn:AGL:widget:required-api">
-    <param name="lib/afb-control-afb.so" value="local" />
     <param name="afm-main" value="ws" />
     <param name="homescreen" value="ws" />
   </feature>
+  <feature name="urn:AGL:widget:required-permission">
+    <param name="urn:AGL:permission:afm:system:widget:start" value="required" />
+  	<param name="urn:AGL:permission::public:htdocs" value="required" />
+    <param name="urn:AGL:permission::public:hidden" value="required" />
+  </feature>
+
 </widget>
