--- a/conf.d/project/etc/agl_service_ctlapp_sample.json
+++ b/conf.d/project/etc/agl_service_ctlapp_sample.json
@@ -26,10 +26,19 @@
   }, {
     "uid": "display",
     "action": "lua://ctlapp_sample#_display_application_"
+  }, {
+    "uid": "getApplicationState",
+    "action": "lua://ctlapp_sample#_get_application_state_"
+  }, {
+    "uid": "registerApplicationState",
+    "action": "lua://ctlapp_sample#_register_application_state_"
   }],
 
   "events": [{
     "uid": "ctlapp_sample_event",
+    "action": "lua://ctlapp_sample#_evt_catcher_"
+  }, {
+    "uid": "windowmanager/statusChanged",
     "action": "lua://ctlapp_sample#_evt_catcher_"
   }]
 }
