--- a/conf.d/wgt/config.xml.in
+++ b/conf.d/wgt/config.xml.in
@@ -15,10 +15,10 @@
   <feature name="urn:AGL:widget:required-api">
     <param name="afm-main" value="ws" />
     <param name="homescreen" value="ws" />
+    <param name="windowmanager" value="ws" />
   </feature>
   <feature name="urn:AGL:widget:required-permission">
     <param name="urn:AGL:permission:afm:system:widget:start" value="required" />
-  	<param name="urn:AGL:permission::public:htdocs" value="required" />
     <param name="urn:AGL:permission::public:hidden" value="required" />
   </feature>
 
