--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,13 @@
 ###########################################################################
 # Copyright 2018 IoT.bzh
 #
+# author: Fulup Ar Foll <fulup@iot.bzh>
+#
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+#	http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
@@ -14,25 +16,36 @@
 # limitations under the License.
 ###########################################################################
 
-# Add target to project dependency list
-PROJECT_TARGET_ADD(agl_services_ctlapp_sample)
+PROJECT_TARGET_ADD(C-plugin-sample)
 
-	# Define project Targets
-	add_library(${TARGET_NAME} MODULE
-		${TARGET_NAME}-binding.c
-	)
+		# Define targets
+		ADD_LIBRARY(${TARGET_NAME} MODULE
+			    ${TARGET_NAME}.c
+			   )
 
-	# Binder exposes a unique public entry point
+		# Alsa Plugin properties
+		SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
+				      LABELS "PLUGIN"
+				      PREFIX ""
+				      SUFFIX ".ctlso"
+				      OUTPUT_NAME ${TARGET_NAME}
+				     )
+
+		# Library dependencies (include updates automatically)
+		TARGET_LINK_LIBRARIES(${TARGET_NAME}
+				      afb-helpers
+				      ${link_libraries}
+				     )
+
+		target_include_directories(${TARGET_NAME}
+		PRIVATE "${CMAKE_SOURCE_DIR}/app-controller/ctl-lib")
+
+PROJECT_TARGET_ADD(LUA-plugin-sample)
+	file(GLOB LUA_FILES "*.lua")
+
+	add_input_files("${LUA_FILES}")
+
 	SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
-		PREFIX "afb-"
-		LABELS "BINDING"
-		OUTPUT_NAME ${TARGET_NAME}
-	)
-
-	# Library dependencies (include updates automatically)
-	TARGET_LINK_LIBRARIES(${TARGET_NAME}
-		afb-helpers
-		ctl-utilities
-		${link_libraries})
-
-add_subdirectory("plugins")
+			      LABELS "DATA"
+			      OUTPUT_NAME ${TARGET_NAME}
+			     )
